--- a/style.css
+++ b/style.css
@@ -134,6 +134,8 @@ button:hover {
   flex-direction: column;
   gap: 15px;
   align-items: center;
+  padding-top: 50px;
+  padding-bottom: 75px;
 }
 
 .button-group a {
@@ -147,7 +149,7 @@ button:hover {
   opacity: 0;
   transform: scale(0.9);
   transition: opacity 1s ease, transform 0.5s ease;
-  width: 200px;
+  width: 350px;
   text-align: center;
 }
 
