--- a/style.css
+++ b/style.css
@@ -68,11 +68,13 @@ button:hover {
   position: relative;
   width: 100%;
   text-align: center;
+  min-height: 100vh;   /* always fill screen height */
+  overflow: hidden;    /* prevent initial pointless scroll */
 }
 
 #secure-screen h2.alien-title {
   position: absolute;
-  top: 15vh;
+  top: 25vh;
   left: 50%;
   transform: translateX(-50%);
   opacity: 0;                /* hidden at first */
@@ -100,6 +102,7 @@ button:hover {
 #typed-text {
   font-size: 1.1em;
   margin-top: 20vh;       /* start 20% down the screen */
+  margin-bottom: 10vh;    /* give breathing space at bottom */
   white-space: pre-line;
   width: 50%;
   padding: 10px;
@@ -140,8 +143,7 @@ button:hover {
   flex-direction: column;
   gap: 15px;
   align-items: center;
-  padding-top: 50px;
-  padding-bottom: 75px;
+  padding-bottom: 10vh;
 }
 
 .button-group a {
